[gd_scene load_steps=11 format=3 uid="uid://hobxxyo4wqn0"]

[ext_resource type="Script" uid="uid://d0os1gqgrx550" path="res://Scripts/Classes/item_node.gd" id="1_dv0e2"]
[ext_resource type="Texture2D" uid="uid://dtfqctrkenpq5" path="res://icon.svg" id="2_6fjgt"]
[ext_resource type="Texture2D" uid="uid://rm050n5p7vop" path="res://Assets/Sprites/Icons/trigger icons temp.png" id="3_642n1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv0e2"]
size = Vector2(80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_21xkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}, {
"duration": 1.0,
"texture": ExtResource("2_6fjgt")
}],
"loop": true,
"name": &"debug",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"plushie",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"sticker",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"toy",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kry3j"]
atlas = ExtResource("3_642n1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_21xkr"]
atlas = ExtResource("3_642n1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bp64"]
atlas = ExtResource("3_642n1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_344ge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kry3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21xkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bp64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gbba"]
size = Vector2(24, 40)

[node name="Item" type="Node2D"]
script = ExtResource("1_dv0e2")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-64, -64)
collision_layer = 5
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_dv0e2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_21xkr")
animation = &"debug"

[node name="Number" type="Label" parent="Sprite"]
offset_left = -64.0
offset_top = -64.0
offset_right = -24.0
offset_bottom = -41.0
vertical_alignment = 1

[node name="TriggerIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(24, 24)
sprite_frames = SubResource("SpriteFrames_344ge")

[node name="Number" type="Label" parent="TriggerIcon"]
offset_left = -24.0
offset_top = -32.0
offset_right = 8.0
offset_bottom = -9.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="TriggerIcon"]
position = Vector2(-8, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerIcon/Area2D"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8gbba")

[node name="PanelContainer" type="PanelContainer" parent="TriggerIcon"]
visible = false
z_index = 2
custom_minimum_size = Vector2(300, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 292.0
offset_bottom = 52.0
scale = Vector2(1e-05, 1e-05)
mouse_filter = 1

[node name="Label" type="Label" parent="TriggerIcon/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
autowrap_mode = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_overall_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_overall_mouse_exited"]
[connection signal="mouse_entered" from="TriggerIcon/Area2D" to="." method="_on_trigger_icon_mouse_entered"]
[connection signal="mouse_exited" from="TriggerIcon/Area2D" to="." method="_on_trigger_icon_mouse_exited"]
